--- a/H_WorkTools/Resources/Language/zh_cn.xaml
+++ b/H_WorkTools/Resources/Language/zh_cn.xaml
@@ -38,9 +38,11 @@
     <s:String x:Key="DeskShareMode2">控制</s:String>
     <s:String x:Key="DeskShareBtnDeskShare">共享</s:String>
     <s:String x:Key="DeskShareText">Alt+Shift+Esc快捷键快速结束共享</s:String>
-    <s:String x:Key="IP2">加入或求助</s:String>
-    <s:String x:Key="Password2">共享</s:String>
-    <s:String x:Key="BtnDeskShareJoin">求助</s:String>
+    <s:String x:Key="DeskShareTitle2">加入或求助</s:String>
+    <s:String x:Key="DeskShareIP2">加入或求助</s:String>
+    <s:String x:Key="DeskSharePassword2">共享</s:String>
+    <s:String x:Key="BtnDeskShareJoin">加入</s:String>
+    <s:String x:Key="BtnDeskShareInvite">求助</s:String>
     <s:String x:Key="DeskShareText2">求助模式:输入求助人IP后点击求助。加入模式：输入加入IP后点击加入按钮。</s:String>
     <s:String x:Key="LvAudience">观众列表</s:String>
     <s:String x:Key="PortTitle">端口工具</s:String>
@@ -51,16 +53,31 @@
     <s:String x:Key="ScreenRecordingOpenPath">打开目录</s:String>
     <s:String x:Key="ScreenRecording_Refresh_Click">刷新</s:String>
     <s:String x:Key="ScreenRecording_Video_Click">录屏</s:String>
-    <s:String x:Key="ScreenRecordingPath">生产路径：</s:String>
-    <s:String x:Key="ScreenRecordingTime">录制时间:</s:String>
-    <s:String x:Key="ScreenRecordingAudio">音频设备：</s:String>
+    <s:String x:Key="ScreenRecordingPath">生产路径</s:String>
+    <s:String x:Key="ScreenRecordingTime">录制时间</s:String>
+    <s:String x:Key="ScreenRecordingAudio">音频设备</s:String>
     <s:String x:Key="ClipboardTitle">粘贴助手</s:String>
     <s:String x:Key="ClipboardAdd">监听</s:String>
     <s:String x:Key="ClipboardDelete">删除</s:String>
     <s:String x:Key="ClipboardText">开启监听Ctrl+C自动添加到剪贴板，双击或快捷键复制剪贴板内容</s:String>
-    <s:String x:Key="ScreenRecording_Video_Click">录屏</s:String>
-    <s:String x:Key="ScreenRecording_Video_Click">录屏</s:String>
-    <s:String x:Key="ScreenRecording_Video_Click">录屏</s:String>
-    <s:String x:Key="ScreenRecording_Video_Click">录屏</s:String>
-
+    <s:String x:Key="SystemTitle">系统设置</s:String>
+    <s:String x:Key="btn_Language_label">设置语言</s:String>
+    <s:String x:Key="txtClipboardPassword">剪贴板密码</s:String>
+    <s:String x:Key="Alarmms">闹铃(ms)</s:String>
+    <s:String x:Key="IsStart">开机启动</s:String>
+    <s:String x:Key="rbStart1">是</s:String>
+    <s:String x:Key="rbStart2">否</s:String>
+    <s:String x:Key="ScreenCaptureTitle">截图设置</s:String>
+    <s:String x:Key="ScreenCapture">截图</s:String>
+    <s:String x:Key="ScreenCaptureLast">上一次截图</s:String>
+    <s:String x:Key="ScreenCaptureDiff">截图对比</s:String>
+    <s:String x:Key="ScreenCaptureDiffTitle">截图对比标题</s:String>
+    <s:String x:Key="ScreenCaptureOpacity">透明度</s:String>
+    <s:String x:Key="ScreenCaptureText">上一次截图：自动选区上一次区域。截图对比：弹出透明的窗体可以做比对。注：可以设置透明度和对比窗体标题</s:String>
+    <s:String x:Key="OtherTitle">其他快捷键</s:String>
+    <s:String x:Key="Stop">停止共享桌面</s:String>
+    <s:String x:Key="Clipboard">剪贴板快捷键</s:String>
+    <s:String x:Key="cbClipboardNumber1">键盘数字</s:String>
+    <s:String x:Key="cbClipboardNumber2">小键盘</s:String>
+    <s:String x:Key="SetLanguage_Click">设置</s:String>
 </ResourceDictionary>
