英语 韩语 日语  中文都处理好。  但是翻译不一定正确，

--- a/H_WorkTools/Resources/Language/en_us.xaml
+++ b/H_WorkTools/Resources/Language/en_us.xaml
@@ -2,13 +2,82 @@
                      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                      xmlns:s="clr-namespace:System;assembly=mscorlib"
                      xmlns:local="clr-namespace:WpfApplication">
-    <s:String x:Key="AlarmViewcbType0">指定日期</s:String>
-    <s:String x:Key="AlarmViewcbType1">每    周</s:String>
-    <s:String x:Key="AlarmViewcbType2">每    月</s:String>
-    <s:String x:Key="btn_ScreenCapture">截屏</s:String>
-    <s:String x:Key="btn_ScreenRecord">录屏</s:String>
-    <s:String x:Key="btn_DeskShare">远程</s:String>
-    <s:String x:Key="btn_Language">语言</s:String>
-    <s:String x:Key="btn_Language_label">设置语言：</s:String>
-    <s:String x:Key="btn_SetLanguage_label">设   置</s:String>
+    <s:String x:Key="AlarmViewcbType0">Specify date</s:String>
+    <s:String x:Key="AlarmViewcbType1">Weekly</s:String>
+    <s:String x:Key="AlarmViewcbType2">Monthly</s:String>
+    <s:String x:Key="AlarmViewW1">Mon</s:String>
+    <s:String x:Key="AlarmViewW2">Tue</s:String>
+    <s:String x:Key="AlarmViewW3">Wed</s:String>
+    <s:String x:Key="AlarmViewW4">Thu</s:String>
+    <s:String x:Key="AlarmViewW5">Fri</s:String>
+    <s:String x:Key="AlarmViewW6">Sat</s:String>
+    <s:String x:Key="AlarmViewW7">Sun</s:String>
+    <s:String x:Key="AlarmViewCancel">Cancel</s:String>
+    <s:String x:Key="AlarmViewOk">Ok</s:String>
+    <s:String x:Key="AlarmViewTitle">Title</s:String>
+    <s:String x:Key="AlarmViewContent">Content</s:String>
+    <s:String x:Key="ExeViewTitle">Title</s:String>
+    <s:String x:Key="ExeViewSelect">Select</s:String>
+    <s:String x:Key="ExeViewOK">Ok</s:String>
+    <s:String x:Key="ExeViewCancel">Cancel</s:String>
+    <s:String x:Key="TopMost">TopMost</s:String>
+    <s:String x:Key="WindowMinimize">WindowMinimize</s:String>
+    <s:String x:Key="Exit">Exit</s:String>
+    <s:String x:Key="AppsTile">Application Center</s:String>
+    <s:String x:Key="AppsAdd">Add</s:String>
+    <s:String x:Key="AppsDelete">Delete</s:String>
+    <s:String x:Key="AlarmTile">Reminder tool</s:String>
+    <s:String x:Key="AlarmAdd">Add"</s:String>
+    <s:String x:Key="AlarmDelete">Delete</s:String>
+    <s:String x:Key="DeskShareTitle">Share</s:String>
+    <s:String x:Key="DeskShareNiceName">NiceName</s:String>
+    <s:String x:Key="DeskShareIP">Local IP</s:String>
+    <s:String x:Key="DeskSharePassword">Password</s:String>
+    <s:String x:Key="DeskShareMode">Mode</s:String>
+    <s:String x:Key="DeskShareMode1">Share</s:String>
+    <s:String x:Key="DeskShareMode2">Control</s:String>
+    <s:String x:Key="DeskShareBtnDeskShare">Share</s:String>
+    <s:String x:Key="DeskShareText">Alt+Shift+EscShortcut key to quickly end sharing</s:String>
+    <s:String x:Key="DeskShareTitle2">Join or ask for help</s:String>
+    <s:String x:Key="DeskShareIP2">IP</s:String>
+    <s:String x:Key="DeskSharePassword2">Share</s:String>
+    <s:String x:Key="BtnDeskShareJoin">Join</s:String>
+    <s:String x:Key="BtnDeskShareInvite">Seek help</s:String>
+    <s:String x:Key="DeskShareText2">Help mode: enter the help person's IP and click Help. Join mode: enter the join IP and click the join button.</s:String>
+    <s:String x:Key="LvAudience">Audience list</s:String>
+    <s:String x:Key="PortTitle">Port tool</s:String>
+    <s:String x:Key="PortSelect">Select</s:String>
+    <s:String x:Key="PortKill">Kill process</s:String>
+    <s:String x:Key="ScreenRecordingTitle">Screen recording tool</s:String>
+    <s:String x:Key="ScreenRecordingSetPath">set up path</s:String>
+    <s:String x:Key="ScreenRecordingOpenPath">Open Directory</s:String>
+    <s:String x:Key="ScreenRecording_Refresh_Click">Refresh</s:String>
+    <s:String x:Key="ScreenRecording_Video_Click">Screen recording</s:String>
+    <s:String x:Key="ScreenRecordingPath">Production path</s:String>
+    <s:String x:Key="ScreenRecordingTime">Recording time</s:String>
+    <s:String x:Key="ScreenRecordingAudio">Audio device</s:String>
+    <s:String x:Key="ClipboardTitle">Clipboard Assistant</s:String>
+    <s:String x:Key="ClipboardAdd">monitor</s:String>
+    <s:String x:Key="ClipboardDelete">Delete</s:String>
+    <s:String x:Key="ClipboardText">Enable listening Ctrl+C to automatically add to the clipboard, double-click or shortcut key to copy the clipboard contents</s:String>
+    <s:String x:Key="SystemTitle">System settings</s:String>
+    <s:String x:Key="btn_Language_label">Set language</s:String>
+    <s:String x:Key="txtClipboardPassword">Clipboard password</s:String>
+    <s:String x:Key="Alarmms">Alarm(ms)</s:String>
+    <s:String x:Key="IsStart">Startup</s:String>
+    <s:String x:Key="rbStart1">yes</s:String>
+    <s:String x:Key="rbStart2">no</s:String>
+    <s:String x:Key="ScreenCaptureTitle">Screenshot settings</s:String>
+    <s:String x:Key="ScreenCapture">Screenshot</s:String>
+    <s:String x:Key="ScreenCaptureLast">Last screenshot</s:String>
+    <s:String x:Key="ScreenCaptureDiff">Screenshot Comparison Form</s:String>
+    <s:String x:Key="ScreenCaptureDiffTitle">Screenshot Comparison Form Title</s:String>
+    <s:String x:Key="ScreenCaptureOpacity">Opacity</s:String>
+    <s:String x:Key="ScreenCaptureText">Previous screenshot: automatically select the previous area. Screenshot comparison: a transparent window pops up for comparison. Note: You can set the transparency and contrast form Title</s:String>
+    <s:String x:Key="OtherTitle">Other shortcut keys</s:String>
+    <s:String x:Key="Stop">Stop sharing desktop</s:String>
+    <s:String x:Key="Clipboard">Clipboard shortcuts</s:String>
+    <s:String x:Key="cbClipboardNumber1">Keyboard Numbers</s:String>
+    <s:String x:Key="cbClipboardNumber2">Number Pad</s:String>
+    <s:String x:Key="SetLanguage_Click">Settings</s:String>
 </ResourceDictionary>
