--- a/H_WorkTools/MainWindow.xaml
+++ b/H_WorkTools/MainWindow.xaml
@@ -174,7 +174,7 @@
                             <TextBlock Margin="0,0,0,8" Style="{StaticResource MaterialDesignHeadline5TextBlock}" Text="{DynamicResource DeskShareTitle}" />
                             <md:Card>
                                 <TabControl Style="{StaticResource MaterialDesignFilledTabControl}">
-                                    <TabItem Header="共享">
+                                    <TabItem Header="{DynamicResource DeskShareTitle}">
                                         <Grid >
                                             <Grid.ColumnDefinitions>
                                                 <ColumnDefinition Width="100"/>
@@ -202,7 +202,7 @@
                                             <RadioButton Grid.Row="3" Grid.Column="1" x:Name="rbMode1" Content="{DynamicResource DeskShareMode1}" Style="{StaticResource MaterialDesignRadioButton}" IsChecked="True" Margin="0,10,0,0"/>
                                             <RadioButton Grid.Row="3" Grid.Column="3" x:Name="rbMode2" Content="{DynamicResource DeskShareMode2}" Style="{StaticResource MaterialDesignRadioButton}" Margin="0,10,0,0"/>
                                             <Button Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="1" Width="80" Content="{DynamicResource DeskShareBtnDeskShare}" x:Name="BtnDeskShare" Click="BtnDeskShare_Click" FontSize="14" Cursor="Hand" Margin="0,10,0,0"/>
-                                            <TextBlock  Grid.Row="5" Grid.Column="0" Grid.ColumnSpan="5" TextWrapping="Wrap" Margin="10,10,10,10" Text="{DynamicResource DeskShareTitle2}"></TextBlock>
+                                            <TextBlock  Grid.Row="5" Grid.Column="0" Grid.ColumnSpan="5" TextWrapping="Wrap" Margin="10,10,10,10" Text="{DynamicResource DeskShareText}"></TextBlock>
                                         </Grid>
                                     </TabItem>
                                     <TabItem Header="{DynamicResource DeskShareTitle2}">
@@ -221,7 +221,7 @@
                                                 <RowDefinition FrameworkElement.FlowDirection="RightToLeft"></RowDefinition>
                                             </Grid.RowDefinitions>
                                             <Label Grid.Row="0" Grid.Column="0" Content="{DynamicResource DeskShareIP2}"  Margin="10,10,0,0"/>
-                                            <TextBox Grid.Row="0" Grid.Column="1" Grid.ColumnSpan="4" x:Name="txtIp" md:HintAssist.Hint="IP" Text="192.168.3.132" Margin="0,10,10,0"/>
+                                            <TextBox Grid.Row="0" Grid.Column="1" Grid.ColumnSpan="4" x:Name="txtIp" md:HintAssist.Hint="IP" Text="" Margin="0,10,10,0"/>
                                             <Label Grid.Row="1" Grid.Column="0" Content="{DynamicResource DeskSharePassword2}"  Margin="10,10,0,0"/>
                                             <TextBox Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="4" x:Name="txtRdpPswKey" md:HintAssist.Hint="Password" MaxLength="4" Text="" Margin="0,0,10,0"/>
                                             <Button Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="1" Width="80" Content="{DynamicResource BtnDeskShareJoin}" x:Name="BtnDeskShareJoin" Click="BtnDeskShareJoin_Click" FontSize="14" Cursor="Hand" Margin="0,10,0,0"/>
