--- a/H_WorkTools/MainWindow.xaml
+++ b/H_WorkTools/MainWindow.xaml
@@ -195,7 +195,7 @@
                                             <Label Grid.Row="0" Grid.Column="0" Content="{DynamicResource DeskShareNiceName}" Margin="10,10,0,0"/>
                                             <TextBox Grid.Row="0" Grid.Column="1" Grid.ColumnSpan="4" x:Name="txtNiceName" md:HintAssist.Hint="NiceName" Text="" Margin="0,10,10,0"/>
                                             <Label Grid.Row="1" Grid.Column="0" Content="{DynamicResource DeskShareIP}" Margin="10,10,0,0"/>
-                                            <ComboBox Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="4" x:Name="cbIp" DisplayMemberPath="IP" SelectedValuePath="id" IsEnabled="{Binding Path=IsChecked, ElementName=FilledComboBoxEnabledCheckBox}" Margin="0,0,10,0"/>
+                                            <ComboBox Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="4" x:Name="cbIp" DisplayMemberPath="title" SelectedValuePath="id" IsEnabled="{Binding Path=IsChecked, ElementName=FilledComboBoxEnabledCheckBox}" Margin="0,0,10,0"/>
                                             <Label Grid.Row="2" Grid.Column="0" Content="{DynamicResource DeskSharePassword}"  Margin="10,10,0,0"/>
                                             <TextBox Grid.Row="2" Grid.Column="1" Grid.ColumnSpan="4" x:Name="txtRdpKey" md:HintAssist.Hint="Password" MaxLength="4" Text="" Margin="0,0,10,0"/>
                                             <Label Grid.Row="3" Grid.Column="0" Content="{DynamicResource DeskShareMode}" Margin="10,10,0,0"/>
