--- a/H_WorkTools/Resources/Language/kr_kr.xaml
+++ b/H_WorkTools/Resources/Language/kr_kr.xaml
@@ -80,4 +80,6 @@
     <s:String x:Key="cbClipboardNumber1">건반 숫자</s:String>
     <s:String x:Key="cbClipboardNumber2">키패드</s:String>
     <s:String x:Key="SetLanguage_Click">설정</s:String>
+    <s:String x:Key="RuleCount_Click">통계</s:String>
+    <s:String x:Key="RuleContent">코드행수통계</s:String>
 </ResourceDictionary>
