--- a/H_WorkTools/Resources/Language/zh_cn.xaml
+++ b/H_WorkTools/Resources/Language/zh_cn.xaml
@@ -80,4 +80,6 @@
     <s:String x:Key="cbClipboardNumber1">键盘数字</s:String>
     <s:String x:Key="cbClipboardNumber2">小键盘</s:String>
     <s:String x:Key="SetLanguage_Click">设置</s:String>
+    <s:String x:Key="RuleCount_Click">统计</s:String>
+    <s:String x:Key="RuleContent">统计代码行数</s:String>
 </ResourceDictionary>
